src/main/java/umg/edu/antlr/pascal/PascalParser.java
// Generated from C:/Code/Projects/Java/CompiladorMultilenguaje/src/main/java/umg/edu/antlr/pascal/PascalParser.g4 by ANTLR 4.13.2
package umg.edu.antlr.pascal;

    import java.util.*;
    import umg.edu.symboltable.*;
    import umg.edu.error.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PROGRAM=1, VAR=2, CONST=3, TYPE=4, PROCEDURE=5, FUNCTION=6, BEGIN=7, END=8, 
		IF=9, THEN=10, ELSE=11, WHILE=12, DO=13, FOR=14, TO=15, DOWNTO=16, REPEAT=17, 
		UNTIL=18, CASE=19, OF=20, WITH=21, GOTO=22, LABEL=23, INTEGER_TYPE=24, 
		REAL_TYPE=25, BOOLEAN_TYPE=26, CHAR_TYPE=27, STRING_TYPE=28, ARRAY=29, 
		RECORD=30, SET=31, FILE=32, POINTER=33, TRUE=34, FALSE=35, NIL=36, AND=37, 
		OR=38, NOT=39, DIV=40, MOD=41, IN=42, ASSIGN=43, PLUS=44, MINUS=45, MULT=46, 
		DIVIDE=47, EQ=48, NE=49, LT=50, LE=51, GT=52, GE=53, SEMICOLON=54, COMMA=55, 
		DOT=56, DOTDOT=57, COLON=58, LPAREN=59, RPAREN=60, LBRACKET=61, RBRACKET=62, 
		POINTER_OP=63, INTEGER_LITERAL=64, REAL_LITERAL=65, STRING_LITERAL=66, 
		CHAR_LITERAL=67, IDENTIFIER=68, COMMENT1=69, COMMENT2=70, LINE_COMMENT=71, 
		WS=72;
	public static final int
		RULE_program = 0, RULE_programBlock = 1, RULE_declarationPart = 2, RULE_labelDeclaration = 3, 
		RULE_labelList = 4, RULE_constantDeclaration = 5, RULE_constantDefinition = 6, 
		RULE_typeDeclaration = 7, RULE_typeDefinition = 8, RULE_variableDeclaration = 9, 
		RULE_variableGroup = 10, RULE_identifierList = 11, RULE_procedureDeclaration = 12, 
		RULE_procedureHeading = 13, RULE_functionHeading = 14, RULE_resultType = 15, 
		RULE_formalParameterList = 16, RULE_formalParameterSection = 17, RULE_parameterGroup = 18, 
		RULE_parameterType = 19, RULE_indexType = 20, RULE_procedureBody = 21, 
		RULE_functionBody = 22, RULE_type = 23, RULE_simpleType = 24, RULE_ordinalType = 25, 
		RULE_enumType = 26, RULE_subrangeType = 27, RULE_realType = 28, RULE_structuredType = 29, 
		RULE_arrayType = 30, RULE_componentType = 31, RULE_recordType = 32, RULE_fieldList = 33, 
		RULE_fixedPart = 34, RULE_recordSection = 35, RULE_variantPart = 36, RULE_tag = 37, 
		RULE_variant = 38, RULE_caseLabelList = 39, RULE_caseLabel = 40, RULE_setType = 41, 
		RULE_fileType = 42, RULE_pointerType = 43, RULE_statementPart = 44, RULE_block = 45, 
		RULE_statement = 46, RULE_simpleStatement = 47, RULE_assignmentStatement = 48, 
		RULE_variable = 49, RULE_procedureCall = 50, RULE_actualParameterList = 51, 
		RULE_actualParameter = 52, RULE_gotoStatement = 53, RULE_emptyStatement = 54, 
		RULE_structuredStatement = 55, RULE_compoundStatement = 56, RULE_statementList = 57, 
		RULE_conditionalStatement = 58, RULE_ifStatement = 59, RULE_caseStatement = 60, 
		RULE_caseListElement = 61, RULE_repetitiveStatement = 62, RULE_whileStatement = 63, 
		RULE_repeatStatement = 64, RULE_forStatement = 65, RULE_forList = 66, 
		RULE_initialValue = 67, RULE_finalValue = 68, RULE_withStatement = 69, 
		RULE_recordVariableList = 70, RULE_expression = 71, RULE_relationalOperator = 72, 
		RULE_simpleExpression = 73, RULE_addingOperator = 74, RULE_term = 75, 
		RULE_multiplyingOperator = 76, RULE_factor = 77, RULE_functionCall = 78, 
		RULE_set = 79, RULE_elementList = 80, RULE_element = 81, RULE_constant = 82, 
		RULE_unsignedConstant = 83, RULE_unsignedNumber = 84;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programBlock", "declarationPart", "labelDeclaration", "labelList", 
			"constantDeclaration", "constantDefinition", "typeDeclaration", "typeDefinition", 
			"variableDeclaration", "variableGroup", "identifierList", "procedureDeclaration", 
			"procedureHeading", "functionHeading", "resultType", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "parameterType", "indexType", 
			"procedureBody", "functionBody", "type", "simpleType", "ordinalType", 
			"enumType", "subrangeType", "realType", "structuredType", "arrayType", 
			"componentType", "recordType", "fieldList", "fixedPart", "recordSection", 
			"variantPart", "tag", "variant", "caseLabelList", "caseLabel", "setType", 
			"fileType", "pointerType", "statementPart", "block", "statement", "simpleStatement", 
			"assignmentStatement", "variable", "procedureCall", "actualParameterList", 
			"actualParameter", "gotoStatement", "emptyStatement", "structuredStatement", 
			"compoundStatement", "statementList", "conditionalStatement", "ifStatement", 
			"caseStatement", "caseListElement", "repetitiveStatement", "whileStatement", 
			"repeatStatement", "forStatement", "forList", "initialValue", "finalValue", 
			"withStatement", "recordVariableList", "expression", "relationalOperator", 
			"simpleExpression", "addingOperator", "term", "multiplyingOperator", 
			"factor", "functionCall", "set", "elementList", "element", "constant", 
			"unsignedConstant", "unsignedNumber"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "':='", "'+'", "'-'", "'*'", 
			"'/'", "'='", "'<>'", "'<'", "'<='", "'>'", "'>='", "';'", "','", "'.'", 
			"'..'", "':'", "'('", "')'", "'['", "']'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PROGRAM", "VAR", "CONST", "TYPE", "PROCEDURE", "FUNCTION", "BEGIN", 
			"END", "IF", "THEN", "ELSE", "WHILE", "DO", "FOR", "TO", "DOWNTO", "REPEAT", 
			"UNTIL", "CASE", "OF", "WITH", "GOTO", "LABEL", "INTEGER_TYPE", "REAL_TYPE", 
			"BOOLEAN_TYPE", "CHAR_TYPE", "STRING_TYPE", "ARRAY", "RECORD", "SET", 
			"FILE", "POINTER", "TRUE", "FALSE", "NIL", "AND", "OR", "NOT", "DIV", 
			"MOD", "IN", "ASSIGN", "PLUS", "MINUS", "MULT", "DIVIDE", "EQ", "NE", 
			"LT", "LE", "GT", "GE", "SEMICOLON", "COMMA", "DOT", "DOTDOT", "COLON", 
			"LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "POINTER_OP", "INTEGER_LITERAL", 
			"REAL_LITERAL", "STRING_LITERAL", "CHAR_LITERAL", "IDENTIFIER", "COMMENT1", 
			"COMMENT2", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PascalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private SymbolTable symbolTable = new SymbolTable();
	    private ErrorTable errorTable = new ErrorTable();
	    private Set<String> declaredIdentifiers = new HashSet<>();
	    
	    public SymbolTable getSymbolTable() { return symbolTable; }
	    public ErrorTable getErrorTable() { return errorTable; }
	    
	    private void addSymbol(String name, String type, int line, int column) {
	        Symbol symbol = new Symbol(name, type, "global", null, line, column);
	        symbolTable.addSymbol(symbol);
	    }
	    
	    private void addError(String message, int line, int column, String type) {
	        CompilationError.ErrorType errorType = CompilationError.ErrorType.SEMANTIC;
	        if ("LEXICAL".equals(type)) {
	            errorType = CompilationError.ErrorType.LEXICAL;
	        } else if ("SYNTACTIC".equals(type)) {
	            errorType = CompilationError.ErrorType.SYNTACTIC;
	        }
	        CompilationError error = new CompilationError(errorType, message, line, column, "");
	        errorTable.addError(error);
	    }
	    
	    private void checkIdentifierDeclaration(String name, int line, int column) {
	        if (declaredIdentifiers.contains(name)) {
	            addError("Identifier '" + name + "' already declared", line, column, "SEMANTIC");
	        } else {
	            declaredIdentifiers.add(name);
	        }
	    }
	    
	    private void checkIdentifierUsage(String name, int line, int column) {
	        if (!declaredIdentifiers.contains(name)) {
	            addError("Identifier '" + name + "' not declared", line, column, "SEMANTIC");
	        }
	    }

	public PascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public TerminalNode PROGRAM() { return getToken(PascalParser.PROGRAM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PascalParser.IDENTIFIER, 0); }
		public TerminalNode SEMICOLON() { return getToken(PascalParser.SEMICOLON, 0); }
		public ProgramBlockContext programBlock() {
			return getRuleContext(ProgramBlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(PascalParser.DOT, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(PROGRAM);
			setState(171);
			((ProgramContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(172);
			match(SEMICOLON);
			setState(173);
			programBlock();
			setState(174);
			match(DOT);

			        addSymbol(((ProgramContext)_localctx).IDENTIFIER.getText(), "program", ((ProgramContext)_localctx).IDENTIFIER.getLine(), ((ProgramContext)_localctx).IDENTIFIER.getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramBlockContext extends ParserRuleContext {
		public DeclarationPartContext declarationPart() {
			return getRuleContext(DeclarationPartContext.class,0);
		}
		public StatementPartContext statementPart() {
			return getRuleContext(StatementPartContext.class,0);
		}
		public ProgramBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterProgramBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitProgramBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitProgramBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramBlockContext programBlock() throws RecognitionException {
		ProgramBlockContext _localctx = new ProgramBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			declarationPart();
			setState(178);
			statementPart();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationPartContext extends ParserRuleContext {
		public List<LabelDeclarationContext> labelDeclaration() {
			return getRuleContexts(LabelDeclarationContext.class);
		}
		public LabelDeclarationContext labelDeclaration(int i) {
			return getRuleContext(LabelDeclarationContext.class,i);
		}
		public List<ConstantDeclarationContext> constantDeclaration() {
			return getRuleContexts(ConstantDeclarationContext.class);
		}
		public ConstantDeclarationContext constantDeclaration(int i) {
			return getRuleContext(ConstantDeclarationContext.class,i);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public List<VariableDeclarationContext> variableDeclaration() {
			return getRuleContexts(VariableDeclarationContext.class);
		}
		public VariableDeclarationContext variableDeclaration(int i) {
			return getRuleContext(VariableDeclarationContext.class,i);
		}
		public List<ProcedureDeclarationContext> procedureDeclaration() {
			return getRuleContexts(ProcedureDeclarationContext.class);
		}
		public ProcedureDeclarationContext procedureDeclaration(int i) {
			return getRuleContext(ProcedureDeclarationContext.class,i);
		}
		public DeclarationPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarationPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterDeclarationPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitDeclarationPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitDeclarationPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationPartContext declarationPart() throws RecognitionException {
		DeclarationPartContext _localctx = new DeclarationPartContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarationPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8388732L) != 0)) {
				{
				setState(185);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LABEL:
					{
					setState(180);
					labelDeclaration();
					}
					break;
				case CONST:
					{
					setState(181);
					constantDeclaration();
					}
					break;
				case TYPE:
					{
					setState(182);
					typeDeclaration();
					}
					break;
				case VAR:
					{
					setState(183);
					variableDeclaration();
					}
					break;
				case PROCEDURE:
				case FUNCTION:
					{
					setState(184);
					procedureDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelDeclarationContext extends ParserRuleContext {
		public TerminalNode LABEL() { return getToken(PascalParser.LABEL, 0); }
		public LabelListContext labelList() {
			return getRuleContext(LabelListContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PascalParser.SEMICOLON, 0); }
		public LabelDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterLabelDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitLabelDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitLabelDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelDeclarationContext labelDeclaration() throws RecognitionException {
		LabelDeclarationContext _localctx = new LabelDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_labelDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(LABEL);
			setState(191);
			labelList();
			setState(192);
			match(SEMICOLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelListContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public List<TerminalNode> IDENTIFIER() { return getTokens(PascalParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PascalParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PascalParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PascalParser.COMMA, i);
		}
		public LabelListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_labelList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterLabelList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitLabelList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitLabelList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelListContext labelList() throws RecognitionException {
		LabelListContext _localctx = new LabelListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_labelList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(194);
			((LabelListContext)_localctx).IDENTIFIER = match(IDENTIFIER);
			setState(199);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(195);
				match(COMMA);
				setState(196);
				((LabelListContext)_localctx).IDENTIFIER = match(IDENTIFIER);
				}
				}
				setState(201);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			        addSymbol(((LabelListContext)_localctx).IDENTIFIER.getText(), "label", ((LabelListContext)_localctx).IDENTIFIER.getLine(), ((LabelListContext)_localctx).IDENTIFIER.getCharPositionInLine());
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstantDeclarationContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(PascalParser.CONST, 0); }
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public ConstantDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).enterConstantDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PascalParserListener ) ((PascalParserListener)listener).exitConstantDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PascalParserVisitor ) return ((PascalParserVisitor<? extends T>)visitor).visitConstantDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
